--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,8 +28,17 @@
 
     <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
     <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
+    <string name="error_get_stock_information">Server error, please try later</string>
 
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
+
+    <string name="item_history_date">Date:</string>
+    <string name="item_history_open_amount">Open:</string>
+    <string name="item_history_high_amount">High:</string>
+    <string name="item_history_low_amount">Low:</string>
+    <string name="item_history_close_amount">Close:</string>
+
+    <string name="amount_with_dollar"><b>%s</b> $</string>
 
 </resources>
